update css - code highlight - scrollbar color - table css
update post
- .NET MAUI : update image size and align

new post
- packet sniffing

--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -67,6 +67,7 @@
     /* Posts */
     --toc-highlight: rgb(116, 178, 243);
     --tag-hover: rgb(43, 56, 62);
+    --tbh-bg: #131313;
     --tb-odd-bg: #252526; /* odd rows of the posts' table */
     --tb-even-bg: rgb(31, 31, 34); /* even rows of the posts' table */
     --tb-border-color: var(--tb-odd-bg);
