--- a/_sass/colors/syntax-light.scss
+++ b/_sass/colors/syntax-light.scss
@@ -6,7 +6,7 @@
     /* --- custom light colors --- */
     --language-border-color: #ececec;
     --highlight-bg-color: #f1f3f5;
-    --highlighter-rouge-color: #3f596f;
+    --highlighter-rouge-color: #427db1;
     --highlight-lineno-color: #9e9e9e;
     --inline-code-bg: #e5e5e5;
     --code-color: #3a3a3a;
