--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -75,11 +75,13 @@
     --card-bg: linear-gradient(217deg, rgba(244, 235, 255, 0.8), rgba(244, 235, 255,0) 70.71%),
     linear-gradient(127deg, rgba(238, 247, 255, 0.8), rgba(238, 247, 255,0) 40.71%),
     linear-gradient(336deg, rgba(255,255,255,.8), rgba(255,255,255,0) 150.71%);
-    --card-hovor-bg: rgb(184, 184, 255);
+    --card-hovor-bg: rgb(159, 255, 148);
     --card-shadow: rgb(104, 104, 104, 0.05) 0 2px 6px 0,
       rgba(211, 209, 209, 0.15) 0 0 0 1px;
     --footnote-target-bg: lightcyan;
-    --tb-odd-bg: #fbfcfd;
+    --tbh-bg: #f9fff3;
+    --tb-odd-bg: #fdfffa;
+    --tb-even-bg: #effcde; // light-theme 에도 추가
     --tb-border-color: #eaeaea;
     --dash-color: silver;
     --kbd-wrap-color: #bdbdbd;
