update css - image border - header1 fontweight - dark theme main-inner-bg - light theme content-hr-image-bg-color
update post
- finish packet sniffing ch1

new post
- packet sniffing ch2

new vscode workspace setting
- markdown snippet
- quick suggetion

--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -113,6 +113,7 @@
     --content-hr-image-bg-color: #8dabd5;
     --content-highlight-scrollbar-color: #1a1c25;
     --content-highlight-scrollbar-thumb-color: #4a4c55;
+    --content-img-border: 2px solid transparent;
     --search-bg: #3a3a3a;
     --toc-wrapper-border-color: rgb(88, 90, 90);
   
