--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -124,9 +124,10 @@
     /* Custom */
     --header-hr-border-color: #ccc;
     --content-hr-border-color: #bbb;
-    --content-hr-image-bg-color: #ff9898;
+    --content-hr-image-bg-color: #e4ffc8;
     --content-highlight-scrollbar-color: #eceeef;
     --content-highlight-scrollbar-thumb-color: #adaeaf;
+    --content-img-border: 2px solid #e4e4e4;
     --search-bg: #fafafa;
     --toc-wrapper-border-color: rgb(137, 212, 130);
 
