update css - change img border to shadow
update post
- update packet sniffing ch2

--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -127,7 +127,7 @@
     --content-hr-image-bg-color: #e4ffc8;
     --content-highlight-scrollbar-color: #eceeef;
     --content-highlight-scrollbar-thumb-color: #adaeaf;
-    --content-img-border: 2px solid #e4e4e4;
+    --content-img-shadow: 0 2px 4px 0 rgba(0, 0, 0, .13), 0 1px 1px 0 rgba(0, 0, 0, .11);
     --search-bg: #fafafa;
     --toc-wrapper-border-color: rgb(137, 212, 130);
 
