--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -113,7 +113,7 @@
     --content-hr-image-bg-color: #8dabd5;
     --content-highlight-scrollbar-color: #1a1c25;
     --content-highlight-scrollbar-thumb-color: #4a4c55;
-    --content-img-border: 2px solid transparent;
+    --content-img-shadow: 0px 0px 0px 1.5px rgba(255, 255, 255, 0.327);
     --search-bg: #3a3a3a;
     --toc-wrapper-border-color: rgb(88, 90, 90);
   
