--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -116,6 +116,8 @@
     --content-img-shadow: 0px 0px 0px 1.5px rgba(255, 255, 255, 0.327);
     --search-bg: #3a3a3a;
     --toc-wrapper-border-color: rgb(88, 90, 90);
+    --footnote-bg: #feffcb2a;
+    --footnote-hover-bg: #feffbf3e;
   
     .light {
       display: none;
