--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -130,5 +130,7 @@
     --content-img-shadow: 0 2px 4px 0 rgba(0, 0, 0, .13), 0 1px 1px 0 rgba(0, 0, 0, .11);
     --search-bg: #fafafa;
     --toc-wrapper-border-color: rgb(137, 212, 130);
+    --footnote-bg: #f6f7c0;
+    --footnote-hover-bg: #fdff95;
 
   } /* light-scheme */
