--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -124,7 +124,7 @@ html {
                     border-bottom: 3px double var(--header-hr-border-color);
                 }
 
-                div.content {
+                article > div.content {
                     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Apple SD Gothic Neo", Tahoma, 나눔고딕, "Nanum Gothic";
                     word-spacing: 1.5px;
                     font-size: 14px;
@@ -145,12 +145,22 @@ html {
                         font-family: var($font-family-heading);
                     }
 
+                    h1 {
+                        font-size: 32px;
+                    }
+
                     h2 {
                         padding-left: 2px;
+                        font-size: 28px;
                     }
 
                     h3 {
+                        font-size: 24px;
                         padding-left: 4px;
+                    }
+
+                    h4 {
+                        font-size: 21px;
                     }
 
                     img {
