--- a/_sass/colors/syntax-dark.scss
+++ b/_sass/colors/syntax-dark.scss
@@ -17,7 +17,7 @@
 
     // CUSTOM
     --bootstrap-button-bg: #0005;
-    --main-inner-bg: #070700;
+    --main-inner-bg: #090906ba;
   
     .highlight .gp {
       color: #87939d;
