--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -140,7 +140,7 @@ html {
                     //     font-weight: 700;
                     // }
 
-                    h1, h2, h3, h4 {
+                    h1, h2, h3, h4, h5 {
                         font-weight: 800;
                         font-family: var($font-family-heading);
                     }
