update css - header underline css
update post
- algo 1
- algo 2
- asp.net 2

new post
- algo 3

--- a/_sass/colors/syntax-light.scss
+++ b/_sass/colors/syntax-light.scss
@@ -21,7 +21,9 @@
   
     // CUSTOM
     --bootstrap-button-bg: #f7faff;
-    --main-inner-bg: #ffffff88;
+    --main-inner-bg: #fafffcdd;
+    --main-inner-border: 0px solid rgb(215, 255, 225);
+    --main-header-bg: url("/assets/img/background/underline_light.png");
     --archive-even-bg: linear-gradient(to left, #e8eeee99, #d0e8ff99, #d0e8ff99, #d0e8ff99, #e8eeee99);
 
     /* --- Syntax highlight theme from `rougify style github` --- */
