--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -102,6 +102,7 @@ html {
                     right: 0;
                     bottom: -10px;
                     background: var(--main-inner-bg);
+                    border: var(--main-inner-border);
                     border-radius: 10px;
                 }
 
@@ -146,21 +147,53 @@ html {
                     }
 
                     h1 {
+                        margin-bottom: 36px;
+                        padding-bottom: 12px;
+                        border-bottom: var(--header-border-bottom);
                         font-size: 32px;
                     }
 
                     h2 {
+                        margin-bottom: 30px;
                         padding-left: 2px;
                         font-size: 28px;
+                        & > span {
+                            padding-bottom: 6px;
+                            padding-right: 12px;
+                            background-image: var(--main-header-bg);
+                            background-size: 100% 100%;
+                            background-repeat: no-repeat;
+                        }
                     }
 
                     h3 {
-                        font-size: 24px;
+                        margin-bottom: 30px;
                         padding-left: 4px;
+                        font-size: 24px;
+                        & > span {
+                            padding-bottom: 6px;
+                            padding-right: 10px;
+                            background-image: var(--main-header-bg);
+                            background-size: 100% 100%;
+                            background-repeat: no-repeat;
+                        }
                     }
 
                     h4 {
+                        margin-bottom: 30px;
+                        padding-left: 6px;
                         font-size: 21px;
+                    }
+
+                    h5 {
+                        margin-top: 30px;
+                        margin-bottom: 20px;
+                        padding-left: 10px;
+                    }
+
+                    & > ol > li, & > ul > li {
+                        margin-top: 12px;
+                        margin-bottom: 12px;
                     }
 
                     img {
