update css - header hideUnderline - latex margin
update post
- algo 3

update snippet
- hide underline

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -130,16 +130,40 @@ html {
                     word-spacing: 1.5px;
                     font-size: 14px;
 
+                    p.hideUnderline {
+                        height: 0px !important;
+                        margin: 0px !important;
+                    }
+
                     & > p {
                         margin-bottom: 24px;
                         padding-left: 6px;
                     }
-                    & > div, & > ul, & > div.table-wrapper, & > div.highlighter-rouge, & > blockquote, & > dl {
+                    & > div, & > ul, & > ol, & > dl, & > div.table-wrapper, & > div.highlighter-rouge, & > blockquote {
                         margin-bottom: 30px;
                     }
                     // *:not(.highlighter-rouge, .highlighter-rouge *){
                     //     font-weight: 700;
                     // }
+
+                    & > mjx-container {
+                        margin-top: 30px;
+                        margin-bottom: 30px;
+
+                        mjx-math {
+                            font-weight: bold !important;
+                        }
+                    }
+
+                    strong mjx-math {
+                        font-weight: bold !important;
+                    }
+
+
+                    & > ol > li, & > ul > li {
+                        margin-top: 12px;
+                        margin-bottom: 12px;
+                    }
 
                     h1, h2, h3, h4, h5 {
                         font-weight: 800;
@@ -157,26 +181,12 @@ html {
                         margin-bottom: 30px;
                         padding-left: 2px;
                         font-size: 28px;
-                        & > span {
-                            padding-bottom: 6px;
-                            padding-right: 12px;
-                            background-image: var(--main-header-bg);
-                            background-size: 100% 100%;
-                            background-repeat: no-repeat;
-                        }
                     }
 
                     h3 {
                         margin-bottom: 30px;
                         padding-left: 4px;
                         font-size: 24px;
-                        & > span {
-                            padding-bottom: 6px;
-                            padding-right: 10px;
-                            background-image: var(--main-header-bg);
-                            background-size: 100% 100%;
-                            background-repeat: no-repeat;
-                        }
                     }
 
                     h4 {
@@ -191,9 +201,31 @@ html {
                         padding-left: 10px;
                     }
 
-                    & > ol > li, & > ul > li {
-                        margin-top: 12px;
-                        margin-bottom: 12px;
+                    &:not(:has(p.hideUnderline)) {
+                        h2 > span {
+                            padding-bottom: 6px;
+                            padding-right: 12px;
+                            background-image: var(--main-header-bg);
+                            background-size: 100% 100%;
+                            background-repeat: no-repeat;
+                        }
+    
+                        h3 > span {
+                            padding-bottom: 6px;
+                            padding-right: 10px;
+                            background-image: var(--main-header-bg);
+                            background-size: 100% 100%;
+                            background-repeat: no-repeat;
+                        }
+
+                        h4 > span {
+                            padding-bottom: 4px;
+                            padding-right: 6px;
+                            background-image: var(--main-header-bg);
+                            background-size: 100% 80%;
+                            background-repeat: no-repeat;
+                            background-position-y: bottom;
+                        }
                     }
 
                     img {
