update css - header margin top, bottom - content element margin bottom - inline-code-bg
update post
-algo 4

--- a/_sass/colors/syntax-light.scss
+++ b/_sass/colors/syntax-light.scss
@@ -8,7 +8,7 @@
     --highlight-bg-color: #f1f3f5;
     --highlighter-rouge-color: #427db1;
     --highlight-lineno-color: #9e9e9e;
-    --inline-code-bg: #e5e5e5;
+    --inline-code-bg: #ececec;
     --code-color: #3a3a3a;
     --code-header-text-color: #a3a3a3;
     --code-header-muted-color: #e5e5e5;
@@ -16,7 +16,7 @@
     --clipboard-checked-color: #43c743;
   
     [class^='prompt-'] {
-      --inline-code-bg: #eaeaea;
+      --inline-code-bg: #f2f2f2;
     }
   
     // CUSTOM
