--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -183,28 +183,28 @@ html {
                         font-size: 32px;
                     }
 
-                    h2 {
+                    h2:not(h1 + h2) {
                         margin-top: 90px;
                         margin-bottom: 35px;
                         padding-left: 2px;
                         font-size: 28px;
                     }
 
-                    h3 {
+                    h3:not(h2 + h3) {
                         margin-top: 90px;
                         margin-bottom: 35px;
                         padding-left: 4px;
                         font-size: 24px;
                     }
 
-                    h4 {
+                    h4:not(h3 + h4) {
                         margin-top: 80px;
                         margin-bottom: 35px;
                         padding-left: 6px;
                         font-size: 21px;
                     }
 
-                    h5 {
+                    h5:not(h4 + h5) {
                         margin-top: 70px;
                         margin-bottom: 30px;
                         padding-left: 10px;
