update post - separate cs2 post into 3 detailed post
update css
- Mathjax container
  - padding-left
  - font-weight

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -155,10 +155,9 @@ html {
                     & > mjx-container {
                         margin-top: 30px;
                         margin-bottom: 30px;
+                        padding-left: 10px;
 
-                        mjx-math {
-                            font-weight: bold !important;
-                        }
+                        text-align: left !important;
                     }
 
                     strong mjx-math {
