update post - cs2-3 bcdcode title
new post
- cs2-5

update css
- font-family

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -126,7 +126,7 @@ html {
                 }
 
                 article > div.content {
-                    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Apple SD Gothic Neo", Tahoma, 나눔고딕, "Nanum Gothic";
+                    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Apple SD Gothic Neo", Tahoma, 나눔고딕, "Nanum Gothic", "Malgun Gothic", "맑은 고딕", "Noto Sans KR", "Noto Sans CJK KR", arial, 돋움, Dotum, Tahoma, Geneva, sans-serif;
                     word-spacing: 1.5px;
                     font-size: 14px;
 
