--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -70,6 +70,7 @@
     --toc-highlight: rgb(116, 178, 243);
     --tag-hover: rgb(43, 56, 62);
     --tbh-bg: #131313;
+    --tbh-tr-border: 1px solid #353535;
     --tb-odd-bg: #252526; /* odd rows of the posts' table */
     --tb-even-bg: rgb(31, 31, 34); /* even rows of the posts' table */
     --tb-border-color: var(--tb-odd-bg);
@@ -88,9 +89,9 @@
     --prompt-tip-icon-color: rgb(15, 164, 15, 0.81);
     --prompt-info-bg: rgba(7, 59, 104, 0.66);
     --prompt-info-icon-color: #0075d1;
-    --prompt-warning-bg: rgb(90, 69, 3, 0.88);
+    --prompt-warning-bg: rgba(56, 43, 1, 0.911);
     --prompt-warning-icon-color: rgb(255, 165, 0, 0.8);
-    --prompt-danger-bg: rgb(86, 28, 8, 0.8);
+    --prompt-danger-bg: rgba(80, 24, 5, 0.904);
     --prompt-danger-icon-color: #cd0202;
   
     /* tags */
